<resources>
    <string name="app_name">Kooksy</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favourites</string>
    <string name="title_create_recipe">Create Recipe</string>
    <string name="title_profile">Profile</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="my_recipes">My Recipes</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="settings">Settings</string>
    <string name="profile_image">Profile Image</string>
    <string name="recipe_album">Recipe Album</string>
    <string name="Kooksy">Kooksy</string>
    <string name="its_cooking_time">Its_cooking_time</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!-- Difficulty Levels -->
    <string-array name="difficulty_levels">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">Update</string>
    <string name="password_hint">New password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="tasty_bites">User Name</string>
    <string name="recipe_book_image">Recipe Book Image</string>
    <string name="details">Details</string>
    <string name="image">image</string>
    <string name="welcome_to_kooksy">WELCOME TO KOOKSY</string>
    <string name="unlock_the_chef_in_you_with_kooksy">Unlock the chef in you with Kooksy!</string>
    <string name="choose_your_recipe">Choose Your Recipe</string>
    <string name="choose_a_recipe">Choose a recipe that suits your taste and mood.Use filters or search</string>
    <string name="create_your_personal_cookbook">Create Your Personal Cookbook</string>
    <string name="save_and_store">Save and store recipes in your personal cookbook!</string>
    <string name="screen1_img_content_desc">Eating Picture</string>
    <string name="screen2_img_content_desc">Search Recipe</string>
    <string name="screen3_img_content_desc">Personal Cookbook</string>
    <string name="right_arrow_to_move_to_next_screen">Right arrow to move to next screen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="recipe_image">Recipe Image</string>
    <string name="back_arrow">Back arrow to navigate to back page</string>
    <string name="heart_symbol_to_like_the_recipe">Heart symbol to like the recipe</string>
    <string name="tells_about_recipe_cooking_time">Tells about recipe cooking time</string>
    <string name="tells_about_difficulty_level_of_recipe">Tells about difficulty level of recipe</string>
    <string name="tells_about_calories_of_recipe">Tells about calories of recipe</string>
    <string name="fav_icon">fav icon</string>
    <string name="ingredients">Ingredients</string>
    <string name="procedure">Procedure</string>
    <string name="sad_with_tears_emoji_for_rating">sad_with_tears_emoji_for_rating</string>
    <string name="sad_emoji_for_rating">sad_emoji_for_rating</string>
    <string name="happy_emoji_for_rating">happy_emoji_for_rating</string>
    <string name="happy_face_with_open_mouth_for_rating">Happy face with open mouth for rating</string>
    <string name="heart_eyes_emoji_for_rating">Heart eyes emoji for rating</string>
    <string name="logout">Logout</string>

</resources>
