<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <!-- Home Fragment -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.teamfour.kooksy.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <!-- Favorite Fragment -->
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.teamfour.kooksy.ui.favorite.FavoritesFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorites" />

    <!-- Profile Fragment -->
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.teamfour.kooksy.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <!-- Create Fragment (Remains for FAB navigation) -->
    <fragment
        android:id="@+id/navigation_create"
        android:name="com.teamfour.kooksy.ui.create.CreateFragment"
        android:label="@string/title_create_recipe"
        tools:layout="@layout/fragment_create" />
</navigation>
