<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <!--Favoriteic_favorite_black_24dp.xml icon for Navigation bar-->
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/title_favorite" />


    <!--Create Recipe icon for Navigation bar-->
    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_create_black_24dp"
        android:title="@string/title_create_recipe" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="Notifications"/>

</menu>