<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.FragmentRecipeDetails">

    <ImageView
        android:id="@+id/recipePageImage"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:contentDescription="@string/recipe_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/recipe_load" />

    <!--stepSize - Allows half-star incrementing -->
    <RatingBar
        android:id="@+id/recipeRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:clickable="false"
        android:isIndicator="false"
        android:numStars="5"
        android:stepSize="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipePageImage" />

    <LinearLayout
        android:id="@+id/linearRecipeDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/recipeRatingBar">

        <androidx.cardview.widget.CardView
            android:id="@+id/cookingTimeCardView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#C5E6F3"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/cookingTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/clock"
                android:drawablePadding="10dp"
                android:text="20 mins"
                android:textAlignment="center"
                android:textColor="@color/dark_gray" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/recipeDifficultyLevelCardView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#F2F0A0"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/recipeDifficultyLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Medium"
                android:textAlignment="center"
                android:textColor="@color/dark_gray" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/recipeCaloriesCardView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#F6E0CD"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/recipeCalories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/fire"
                android:text="400 CAL"
                android:textAlignment="center"
                android:textColor="@color/dark_gray" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/recipeTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/linearRecipeDetails">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/procedure" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipeDetailsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/ratingBtn"
        app:layout_constraintTop_toBottomOf="@+id/recipeTabs" />

    <Button
        android:id="@+id/ratingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rate It!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ratingAnimation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="#AA000000"
        app:lottie_fileName="animations/Rating.json"
        app:lottie_autoPlay="false"
        app:lottie_loop="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>